# Pomegranate-Engine

./: .gitignore  CMakeLists.txt  TODO.md
assets/graphics/shaders/opengl/: color.frag  sprite2d.frag  sprite2d.vert
modules/audio/: CMakeLists.txt  core.cpp  core.h  sample.cpp  sample.h  stream.cpp  stream.h
modules/core/: asset.cpp  asset.h  asset_manager.h  debug.h  directory.cpp  directory.h  file.cpp  file.h  function.cpp  function.h  hash_table.h  list.h  range.cpp  range.h  reflectable.cpp  reflectable.h  serializable.cpp  serializable.h  table.cpp  table.h  thread_pool.h  type.cpp  type.h
modules/ecs/: archetype.cpp  archetype.h  component.cpp  component.h  core.cpp  core.h  core_impl.h  ecs_typedefs.h  entity.cpp  entity.h
modules/events/: event_manager.cpp  event_manager.h  question_manager.cpp  question_manager.h
modules/gameobjects/: CMakeLists.txt  component.cpp  component.h  component_impl.h  core.cpp  core.h  gameobject.cpp  gameobject.h  gameobjects.h  typedefs.h
modules/graphics/opengl/: CMakeLists.txt  buffer.h  camera2d.cpp  camera2d.h  core.cpp  core.h  draw.cpp  draw.h  enumerations.h  graphics.h  mesh.h  shader.cpp  shader.h  stb_image.h  surface2d.cpp  surface2d.h  texture2d.cpp  texture2d.h  vertex2d.cpp  vertex2d.h  vertex3d.cpp  vertex3d.h  window.cpp  window.h
modules/graphics/vulkan/: buffer.h  core.cpp  core.h  enumerations.h  mesh3d.cpp  mesh3d.h  shader.cpp  shader.h  stb_image.h  uniform.cpp  uniform.h  vertex2d.cpp  vertex2d.h  vertex3d.cpp  vertex3d.h  window.cpp  window.h
modules/input/: alias.cpp  alias.h  axis.h  gamepad.cpp  gamepad.h  input_manager.cpp  input_manager.h  keyboard.h  mouse.h
modules/lua/: CMakeLists.txt  debug.cpp  debug.h  ecs.cpp  ecs.h  events.cpp  events.h  lua_state.cpp  lua_state.h
modules/lua/install/: luajit_linux.sh  luajit_mac.sh
modules/math/: CMakeLists.txt  math.h  matrix2x2.cpp  matrix2x2.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  noise1d.h  noise2d.cpp  noise2d.h  random.cpp  random.h  rect.cpp  rect.h  utils.cpp  utils.h  vector2.cpp  vector2.h  vector2i.cpp  vector2i.h  vector3.cpp  vector3.h  vector3i.cpp  vector3i.h  vector4.cpp  vector4.h  vector4i.cpp  vector4i.h
modules/math/geometry/: circle.cpp  circle.h  cube.cpp  cube.h  curve2d.cpp  curve2d.h  curve3d.cpp  curve3d.h  line2d.cpp  line2d.h  line3d.cpp  line3d.h  plane.cpp  plane.h  ray2d.cpp  ray2d.h  rectangle.cpp  rectangle.h  segment2d.cpp  segment2d.h  segment3d.cpp  segment3d.h  shape.cpp  shape.h  sphere.cpp  sphere.h  triangle2d.cpp  triangle2d.h  triangle3d.cpp  triangle3d.h
modules/plugins/: CMakeLists.txt  plugin.cpp  plugin.h
src/: main.cpp
test_plugin/: CMakeLists.txt  plugin.cpp
(+22 files in other folders)
